Use WYSIWYG editor in Froala.

--- a/Bloggie.Web/appsettings.json
+++ b/Bloggie.Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BloggieDbConnectionString": "Server=.;Database=BloggieDb; Trusted_Connection=True;TrustServerCertificate=Yes"
+  },
+  "Cloudinary": {
+    "CloudName": "dgw8l7nf7",
+    "ApiKey": "481429921839375",
+    "ApiSecret": "xCvt7_Vu9uAmXDYxu_T7ir6heJk"
   }
 }
